Added validation of emails and ovrall improved
